--- a/getty-dm/override.conf
+++ b/getty-dm/override.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=-/usr/bin/agetty --skip-login --login-options zodd --noclear %I $TERM
+ExecStart=-/usr/bin/agetty --autologin zodd --noclear %I $TERM
